# sartoris

sartoris/: .bochsrc  .gitignore  CMakeLists.txt  Makefile
sartoris/arch/i386/: CMakeLists.txt  Makefile  compenv.mk
sartoris/arch/i386/boot/: .CMakeLists.txt.swp  CMakeLists.txt  kernelblocks.pl  sartoris_loader.nasm  stage1_5.nasm  stage2mem.nasm
sartoris/arch/i386/kernel/: CMakeLists.txt  Makefile  kernel_int_defines.inc  main.c  stack_winding.nasm  stack_winding_defines.inc  state_switch.s  state_switch_defines.inc
sartoris/arch/i386/lib/: CMakeLists.txt
sartoris/arch/i386/sartoris/: CMakeLists.txt
sartoris/mk/: CMakeLists.txt  Makefile  main.c
